[gd_scene load_steps=2 format=3 uid="uid://d1oq4darui5c4"]

[ext_resource type="Script" path="res://Quest System/quest_display.gd" id="1_qcg36"]

[node name="QuestDisplay" type="CanvasLayer"]
script = ExtResource("1_qcg36")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -290.0
offset_bottom = 108.0
grow_horizontal = 0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="RewardLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
